[package]
name = "stylua"
version = "0.13.1"
authors = ["JohnnyMorganz <johnnymorganz@outlook.com>"]
description = "A code formatter for Lua"
license = "MPL-2.0"
repository = "https://github.com/johnnymorganz/stylua"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "utility", "lua", "lua51", "formatter"]
edition = "2018"
exclude = ["stylua-vscode/**", "tests/**"]

[lib]
name = "stylua_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stylua"
path = "src/cli/main.rs"

[features]
default = []
luau = ["full_moon/roblox"]
lua52 = ["full_moon/lua52"]

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.0"
crossbeam-channel = "0.5.4"
env_logger = { version = "0.9.0", default-features = false }
full_moon = "0.15.1"
globset = "0.4.8"
ignore = "0.4.18"
lazy_static = "1.4.0"
log = "0.4.14"
num_cpus = "1.13.1"
regex = "1.5.4"
serde = "1.0.136"
serde_json = "1.0.79"
similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
thiserror = "1.0.31"
threadpool = "1.8.1"
toml = "0.5.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"

[dev-dependencies]
criterion = "0.3.4"
insta = { version = "1.12.0", features = ["glob"] }
assert_cmd = "2.0.4"

[[bench]]
name = "date"
harness = false

[[bench]]
name = "nested_tables"
harness = false
