[build-system]
requires = ["release-gitter[builder]"]
build-backend = "pseudo_builder"

[tool.release-gitter]
git-url = "https://github.com/JohnnyMorganz/StyLua"
extract-files = ["stylua"]
format = "stylua-{system}-{arch}.zip"
exec = "chmod +x stylua"
[tool.release-gitter.map-arch]
arm64 = "aarch64"
[tool.release-gitter.map-system]
Darwin = "macos"
Windows = "windows"
Linux = "linux"
