[build-system]
requires = ["release-gitter[builder]"]
build-backend = "pseudo_builder"

[tool.release-gitter]
git-url = "https://github.com/JohnnyMorganz/StyLua"
extract-all = true
format = "stylua-{system}-{arch}.zip"
[tool.release-gitter.map-arch]
arm64 = "aarch64"
AMD64 = "x86_64"
[tool.release-gitter.map-system]
Darwin = "macos"
Windows = "windows"
Linux = "linux"
