[build-system]
requires = ["release-gitter[builder]"]
build-backend = "pseudo_builder"

[tool.release-gitter]
git-url = "https://github.com/JohnnyMorganz/StyLua"
extract-all = true
format = "stylua-{system}-{arch}.zip"
exec = """python -c "
import os
import stat
import platform

f = 'stylua'
s = platform.system()

if s in ('Linux', 'Darwin') and os.path.exists(f):
    current_mode = os.stat(f).st_mode
    os.chmod(f, current_mode | stat.S_IEXEC)
" """

[tool.release-gitter.map-arch]
arm64 = "aarch64"
AMD64 = "x86_64"

[tool.release-gitter.map-system]
Darwin = "macos"
Windows = "windows"
Linux = "linux"
