[package]
name = "luafmt-lib"
version = "0.1.0"
authors = ["JohnnyMorganz <therobloxbot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
full_moon = { git = "https://github.com/Kampfkarren/full-moon", version = "0.7.0" }

[features]
default = ["luau"]
luau = ["full_moon/roblox"]