[package]
name = "luafmt"
version = "0.1.0"
authors = ["JohnnyMorganz <therobloxbot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
luafmt-lib = { path = "../luafmt-lib" }
structopt = "0.3.0"
toml = "0.5.7"
